@@ -2,18 +2,18 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: Agent Management Plug-In for NXMC
 Bundle-SymbolicName: org.netxms.ui.eclipse.agentmanager;singleton:=true
-Bundle-Version: 2.0.1
+Bundle-Version: 2.1.0
 Bundle-Activator: org.netxms.ui.eclipse.agentmanager.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
  org.eclipse.core.runtime;bundle-version="3.8.0",
  org.eclipse.jface.text;bundle-version="3.8.2",
- org.netxms.ui.eclipse.console;bundle-version="2.0.0",
+ org.netxms.ui.eclipse.console;bundle-version="2.1.0",
  org.eclipse.ui.workbench.texteditor;bundle-version="3.8.0",
- org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.0",
+ org.netxms.ui.eclipse.objectbrowser;bundle-version="2.1.0",
  org.eclipse.ui.forms;bundle-version="3.5.200",
- org.netxms.ui.eclipse.nxsl;bundle-version="2.0.0",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.0"
+ org.netxms.ui.eclipse.nxsl;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.1.0"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.agentmanager.dialogs,
